fixed some positioning issues, finished dog/cat
main box element still not centered

--- a/styles/position-page.css
+++ b/styles/position-page.css
@@ -5,7 +5,7 @@ nav {
 	background-color: grey;
 	position: fixed;
 	height: 50px;
-	bottom: 266px;
+	
 
 }
 
@@ -39,13 +39,47 @@ div{
 div.bgimage{
 	background-image: url("../images/outerspace_landscape.jpeg");
 	width: 500px;
-	height: 500px;
+	height: 700px;
 	min-width: 100%;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
+}
 
+.dogcatbox {
+	position: fixed;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 100px;
+	display: block;
+	width: 600px;
+	height: 300px;
+	border: 10px dotted green;
+	text-align: center;
+}
 
+.cat, .dog{
+	width: 200px;
+	height: 200px;
+	display: inline;
+	position: absolute;
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+}
 
+.dog{
+	
+	background-image: url("../images/spacedog.png");
+	bottom: -120px;
+	right: -90px;
+
+}	
+
+.cat{
+	
+	background-image: url("../images/spacecat.png");
+	top: -30px;
+	left: -20px;
 
 }
